--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
             - uses: actions/checkout@v1
             - name: Terraform staging build tasks
               env:
-                TF_VAR_FASTLY_STAGING_API_KEY: {{ secrets.TF_VAR_FASTLY_STAGING_API_KEY }}
+                TF_VAR_FASTLY_STAGING_API_KEY: ${{ secrets.TF_VAR_FASTLY_STAGING_API_KEY }}
               run: ./bin/build staging 1SOF2sf218IFdLZhnqBlKB true
               shell: bash
     production:
@@ -26,6 +26,6 @@ jobs:
             - uses: actions/checkout@v1
             - name: Terraform production build tasks
               env:
-                TF_VAR_FASTLY_PRODUCTION_API_KEY: {{ secrets.TF_VAR_FASTLY_PRODUCTION_API_KEY }}
+                TF_VAR_FASTLY_PRODUCTION_API_KEY: ${{ secrets.TF_VAR_FASTLY_PRODUCTION_API_KEY }}
               run: ./bin/build production 0p7ElaomsexoNHwdMbYJac false
               shell: bash
