build(workflow): add CD tasks

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
-name: CI
+name: CD
 
 on:
-    pull_request:
+    push:
         branches:
             - master
 
@@ -14,7 +14,7 @@ jobs:
             - name: Terraform staging build tasks
               env:
                   TF_VAR_FASTLY_STAGING_API_KEY: ${{ secrets.TF_VAR_FASTLY_STAGING_API_KEY }}
-              run: ./bin/build staging 1SOF2sf218IFdLZhnqBlKB true
+              run: ./bin/deploy staging
               shell: bash
     production:
         name: Production
@@ -24,5 +24,5 @@ jobs:
             - name: Terraform production build tasks
               env:
                   TF_VAR_FASTLY_PRODUCTION_API_KEY: ${{ secrets.TF_VAR_FASTLY_PRODUCTION_API_KEY }}
-              run: ./bin/build production 0p7ElaomsexoNHwdMbYJac false
+              run: ./bin/deploy production
               shell: bash
