--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
             - name: Terraform staging build tasks
               env:
                   TF_VAR_FASTLY_STAGING_API_KEY: ${{ secrets.TF_VAR_FASTLY_STAGING_API_KEY }}
-              run: ./bin/deploy staging
+              run: ./bin/deploy staging 1SOF2sf218IFdLZhnqBlKB true
               shell: bash
     production:
         name: Production
@@ -24,5 +24,5 @@ jobs:
             - name: Terraform production build tasks
               env:
                   TF_VAR_FASTLY_PRODUCTION_API_KEY: ${{ secrets.TF_VAR_FASTLY_PRODUCTION_API_KEY }}
-              run: ./bin/deploy production
+              run: ./bin/deploy production 0p7ElaomsexoNHwdMbYJac false
               shell: bash
