--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,7 @@ jobs:
         name: Staging - terraform fmt
         runs-on: ubuntu-latest
         steps:
+            - uses: actions/checkout@v1
             - name: Terraform fmt
               uses: hashicorp/terraform-github-actions/fmt@v0.3.7
               env:
