--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,12 +10,11 @@ jobs:
         name: Staging - terraform fmt
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v1
             - name: Terraform fmt
               uses: hashicorp/terraform-github-actions/fmt@v0.3.7
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  TF_ACTION_WORKING_DIR: tf/staging
+                  TF_ACTION_WORKING_DIR: .tf/staging
     staging_terraform_init:
         name: Staging - terraform init
         needs: staging_terraform_fmt
