--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,19 +13,19 @@ jobs:
             - name: Checkout repository
               uses: actions/checkout@v1
             - name: Terraform init
-              uses: hashicorp/terraform-github-actions/init@v0.3.7
+              uses: ./.github/actions/terraform-github-actions/init
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   TF_ACTION_WORKING_DIR: tf/staging
                   TF_ACTION_COMMENT: true
             - name: Terraform fmt
-              uses: hashicorp/terraform-github-actions/fmt@v0.3.7
+              uses: ./.github/actions/terraform-github-actions/fmt
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   TF_ACTION_WORKING_DIR: tf/staging
                   TF_ACTION_COMMENT: true
             - name: Terraform validate
-              uses: hashicorp/terraform-github-actions/validate@v0.3.7
+              uses: ./.github/actions/terraform-github-actions/validate
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   TF_ACTION_WORKING_DIR: tf/staging
