--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,30 +13,36 @@ jobs:
             - name: Checkout repository
               uses: actions/checkout@v1
             - name: Terraform init
-              uses: hashicorp/terraform-github-actions/init@v0.3.7
+              uses: hashicorp/terraform-github-actions/init@v0.4.0
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   TF_ACTION_WORKING_DIR: tf/staging
             - name: Print Terraform version
-              run: terraform --version
+              run: |
+                  cd tf/staging
+                  terraform --version
             - name: Terraform fmt
-              uses: hashicorp/terraform-github-actions/fmt@v0.3.7
+              uses: hashicorp/terraform-github-actions/fmt@v0.4.0
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   TF_ACTION_WORKING_DIR: tf/staging
             - name: Terraform validate
-              uses: hashicorp/terraform-github-actions/validate@v0.3.7
+              uses: hashicorp/terraform-github-actions/validate@v0.4.0
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   TF_ACTION_WORKING_DIR: tf/staging
             - name: Terraform import
-              run: terraform import -input=false -config=tf/staging -no-color fastly_service_v1.api-service-staging-1SOF2sf218IFdLZhnqBlKB 1SOF2sf218IFdLZhnqBlKB
+              run: |
+                  cd tf/staging
+                  terraform import -input=false -no-color fastly_service_v1.api-service-staging-1SOF2sf218IFdLZhnqBlKB 1SOF2sf218IFdLZhnqBlKB
             - name: Print jq version
               run: jq --version
             - name: Add activate attribute to Terraform state
-              run: jq '.resources[].instances[].attributes.activate = env.ACTIVATE' terraform.tfstate > temp && mv temp terraform.tfstate
+              run: |
+                  cd tf/staging
+                  jq '.resources[].instances[].attributes.activate = env.ACTIVATE' terraform.tfstate > temp && mv temp terraform.tfstate
             - name: Terraform plan
-              uses: hashicorp/terraform-github-actions/plan@v0.3.7
+              uses: hashicorp/terraform-github-actions/plan@v0.4.0
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   TF_ACTION_WORKING_DIR: tf/staging
