--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,39 +14,33 @@ jobs:
               uses: actions/checkout@v1
             - name: Terraform init
               uses: hashicorp/terraform-github-actions/init@v0.4.0
+              args: tf/staging
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  TF_ACTION_WORKING_DIR: tf/staging
             - name: Print Terraform version
-              run: |
-                  cd tf/staging
-                  terraform --version
+              run: terraform --version
             - name: Terraform fmt
               uses: hashicorp/terraform-github-actions/fmt@v0.4.0
+              args: tf/staging
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  TF_ACTION_WORKING_DIR: tf/staging
             - name: Terraform validate
               uses: hashicorp/terraform-github-actions/validate@v0.4.0
+              args: tf/staging
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  TF_ACTION_WORKING_DIR: tf/staging
             - name: Terraform import
               env:
                   TF_VAR_FASTLY_STAGING_API_KEY: ${{ secrets.TF_VAR_FASTLY_STAGING_API_KEY }}
-              run: |
-                  cd tf/staging
-                  terraform import -input=false -no-color fastly_service_v1.api-service-staging-1SOF2sf218IFdLZhnqBlKB 1SOF2sf218IFdLZhnqBlKB
+              run: terraform import -input=false -config=tf/staging -no-color fastly_service_v1.api-service-staging-1SOF2sf218IFdLZhnqBlKB 1SOF2sf218IFdLZhnqBlKB
             - name: Print jq version
               run: jq --version
             - name: Add activate attribute to Terraform state
-              run: |
-                  cd tf/staging
-                  jq '.resources[].instances[].attributes.activate = env.ACTIVATE' terraform.tfstate > temp && mv temp terraform.tfstate
+              run: jq '.resources[].instances[].attributes.activate = env.ACTIVATE' terraform.tfstate > temp && mv temp terraform.tfstate
             - name: Terraform plan
               uses: hashicorp/terraform-github-actions/plan@v0.4.0
+              args: tf/staging
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  TF_ACTION_WORKING_DIR: tf/staging
                   TF_VAR_FASTLY_STAGING_API_KEY: ${{ secrets.TF_VAR_FASTLY_STAGING_API_KEY }}
 
