--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,19 +14,22 @@ jobs:
               uses: actions/checkout@v1
             - name: Terraform init
               uses: hashicorp/terraform-github-actions/init@v0.4.0
-              args: tf/staging
+              with:
+                  args: tf/staging
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             - name: Print Terraform version
               run: terraform --version
             - name: Terraform fmt
               uses: hashicorp/terraform-github-actions/fmt@v0.4.0
-              args: tf/staging
+              with:
+                  args: tf/staging
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             - name: Terraform validate
               uses: hashicorp/terraform-github-actions/validate@v0.4.0
-              args: tf/staging
+              with:
+                  args: tf/staging
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             - name: Terraform import
@@ -39,7 +42,8 @@ jobs:
               run: jq '.resources[].instances[].attributes.activate = env.ACTIVATE' terraform.tfstate > temp && mv temp terraform.tfstate
             - name: Terraform plan
               uses: hashicorp/terraform-github-actions/plan@v0.4.0
-              args: tf/staging
+              with:
+                  args: tf/staging
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   TF_VAR_FASTLY_STAGING_API_KEY: ${{ secrets.TF_VAR_FASTLY_STAGING_API_KEY }}
