--- a/.github/workflows/ci-production.yml
+++ b/.github/workflows/ci-production.yml
@@ -7,65 +7,59 @@ jobs:
     production_terraform_fmt:
         name: Terraform fmt
         runs-on: ubuntu-latest
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            TF_ACTION_WORKING_DIR: tf/production
         steps:
             - name: Checkout repository
               uses: actions/checkout@v1
             - name: Terraform fmt
-              uses: hashicorp/terraform-github-actions/fmt@v0.4.0
-              with:
-                  args: tf/production
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              uses: hashicorp/terraform-github-actions/fmt@v0.4.6
     production_terraform_init:
         name: Terraform init
         runs-on: ubuntu-latest
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            TF_ACTION_WORKING_DIR: tf/production
         steps:
             - name: Checkout repository
               uses: actions/checkout@v1
             - name: Terraform init
-              uses: hashicorp/terraform-github-actions/init@v0.4.0
-              with:
-                  args: tf/production
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              uses: hashicorp/terraform-github-actions/init@v0.4.6
             - name: Terraform version
               run: terraform --version
     production_terraform_validate:
         name: Terraform validate
         runs-on: ubuntu-latest
         needs: production_terraform_init
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            TF_ACTION_WORKING_DIR: tf/production
         steps:
             - name: Checkout repository
               uses: actions/checkout@v1
             - name: Terraform init
               run: terraform init -input=false -no-color tf/production
             - name: Terraform validate
-              uses: hashicorp/terraform-github-actions/validate@v0.4.0
-              with:
-                  args: tf/production
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              uses: hashicorp/terraform-github-actions/validate@v0.4.6
     production_terraform_plan:
         name: Terraform plan
         runs-on: ubuntu-latest
         needs: production_terraform_init
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            TF_VAR_FASTLY_PRODUCTION_API_KEY: ${{ secrets.TF_VAR_FASTLY_PRODUCTION_API_KEY }}
+            TF_ACTION_WORKING_DIR: tf/production
         steps:
             - name: Checkout repository
               uses: actions/checkout@v1
             - name: Terraform init
               run: terraform init -input=false -no-color tf/production
             - name: Terraform import
-              env:
-                  TF_VAR_FASTLY_PRODUCTION_API_KEY: ${{ secrets.TF_VAR_FASTLY_PRODUCTION_API_KEY }}
               run: terraform import -input=false -config=tf/production -no-color fastly_service_v1.api-service-production-0p7ElaomsexoNHwdMbYJac 0p7ElaomsexoNHwdMbYJac
             - name: Print jq version
               run: jq --version
             - name: Add activate attribute to Terraform state
               run: jq '.resources[].instances[].attributes.activate = false' terraform.tfstate > temp && mv temp terraform.tfstate
             - name: Terraform plan
-              uses: hashicorp/terraform-github-actions/plan@v0.4.0
-              with:
-                  args: tf/production
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  TF_VAR_FASTLY_PRODUCTION_API_KEY: ${{ secrets.TF_VAR_FASTLY_PRODUCTION_API_KEY }}
+              uses: hashicorp/terraform-github-actions/plan@v0.4.6
