--- a/.github/workflows/ci-staging.yml
+++ b/.github/workflows/ci-staging.yml
@@ -9,39 +9,44 @@ jobs:
         runs-on: ubuntu-latest
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            TF_ACTION_WORKING_DIR: tf/staging
         steps:
             - name: Checkout repository
               uses: actions/checkout@v1
             - name: Terraform fmt
-              uses: hashicorp/terraform-github-actions/fmt@v0.4.0
+              uses: hashicorp/terraform-github-actions/fmt@v0.4.6
+              with:
+                  args: tf/staging
     staging_terraform_init:
         name: Terraform init
         runs-on: ubuntu-latest
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            TF_ACTION_WORKING_DIR: tf/staging
         steps:
             - name: Checkout repository
               uses: actions/checkout@v1
             - name: Terraform init
-              uses: hashicorp/terraform-github-actions/init@v0.4.0
+              uses: hashicorp/terraform-github-actions/init@v0.4.6
+              with:
+                  args: tf/staging
             - name: Terraform version
-              run: terraform --version
+              run: |
+                  cd tf/staging
+                  terraform --version
     staging_terraform_validate:
         name: Terraform validate
         runs-on: ubuntu-latest
         needs: staging_terraform_init
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            TF_ACTION_WORKING_DIR: tf/staging
         steps:
             - name: Checkout repository
               uses: actions/checkout@v1
             - name: Terraform init
-              uses: hashicorp/terraform-github-actions/init@v0.4.0
+              run: terraform init -input=false -no-color tf/staging
             - name: Terraform validate
-              uses: hashicorp/terraform-github-actions/validate@v0.4.0
+              uses: hashicorp/terraform-github-actions/validate@v0.4.6
+              with:
+                  args: tf/staging
     staging_terraform_plan:
         name: Terraform plan
         runs-on: ubuntu-latest
@@ -49,14 +54,11 @@ jobs:
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             TF_VAR_FASTLY_STAGING_API_KEY: ${{ secrets.TF_VAR_FASTLY_STAGING_API_KEY }}
-            TF_ACTION_WORKING_DIR: tf/staging
         steps:
             - name: Checkout repository
               uses: actions/checkout@v1
             - name: Terraform init
-              uses: hashicorp/terraform-github-actions/init@v0.4.0
-              with:
-                  args: tf/staging
+              run: terraform init -input=false -no-color tf/staging
             - name: Terraform import
               run: terraform import -input=false -config=tf/staging -no-color fastly_service_v1.api-service-staging-1SOF2sf218IFdLZhnqBlKB 1SOF2sf218IFdLZhnqBlKB
             - name: Print jq version
@@ -64,6 +66,6 @@ jobs:
             - name: Add activate attribute to Terraform state
               run: jq '.resources[].instances[].attributes.activate = true' terraform.tfstate > temp && mv temp terraform.tfstate
             - name: Terraform plan
-              uses: hashicorp/terraform-github-actions/plan@v0.4.0
+              uses: hashicorp/terraform-github-actions/plan@v0.4.6
               with:
                   args: tf/staging
