--- a/.github/workflows/ci-production.yml
+++ b/.github/workflows/ci-production.yml
@@ -9,23 +9,25 @@ jobs:
         runs-on: ubuntu-latest
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            TF_ACTION_WORKING_DIR: tf/production
         steps:
             - name: Checkout repository
               uses: actions/checkout@v1
             - name: Terraform fmt
               uses: hashicorp/terraform-github-actions/fmt@v0.4.6
+              with:
+                  args: tf/production
     production_terraform_init:
         name: Terraform init
         runs-on: ubuntu-latest
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            TF_ACTION_WORKING_DIR: tf/production
         steps:
             - name: Checkout repository
               uses: actions/checkout@v1
             - name: Terraform init
               uses: hashicorp/terraform-github-actions/init@v0.4.6
+              with:
+                  args: tf/production
             - name: Terraform version
               run: terraform --version
     production_terraform_validate:
@@ -34,14 +36,15 @@ jobs:
         needs: production_terraform_init
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            TF_ACTION_WORKING_DIR: tf/production
         steps:
             - name: Checkout repository
               uses: actions/checkout@v1
             - name: Terraform init
-              uses: hashicorp/terraform-github-actions/init@v0.4.6
+              run: terraform init -input=false -no-color tf/production
             - name: Terraform validate
               uses: hashicorp/terraform-github-actions/validate@v0.4.6
+              with:
+                  args: tf/production
     production_terraform_plan:
         name: Terraform plan
         runs-on: ubuntu-latest
@@ -49,12 +52,11 @@ jobs:
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             TF_VAR_FASTLY_PRODUCTION_API_KEY: ${{ secrets.TF_VAR_FASTLY_PRODUCTION_API_KEY }}
-            TF_ACTION_WORKING_DIR: tf/production
         steps:
             - name: Checkout repository
               uses: actions/checkout@v1
             - name: Terraform init
-              uses: hashicorp/terraform-github-actions/init@v0.4.6
+              run: terraform init -input=false -no-color tf/production
             - name: Terraform import
               run: terraform import -input=false -config=tf/production -no-color fastly_service_v1.api-service-production-0p7ElaomsexoNHwdMbYJac 0p7ElaomsexoNHwdMbYJac
             - name: Print jq version
@@ -62,3 +64,6 @@ jobs:
             - name: Add activate attribute to Terraform state
               run: jq '.resources[].instances[].attributes.activate = false' terraform.tfstate > temp && mv temp terraform.tfstate
             - name: Terraform plan
+              uses: hashicorp/terraform-github-actions/plan@v0.4.6
+              with:
+                  args: tf/staging
