--- a/.github/workflows/ci-staging.yml
+++ b/.github/workflows/ci-staging.yml
@@ -75,5 +75,5 @@ jobs:
                   tf_action_changes_present: ${{ steps.plan.outputs.changes-present }}
             - name: Print Fastly Terraform metadata action outputs
               run: |
-                  echo ${{ steps.metadata.outputs.fastly_service_config_url }}
-                  echo ${{ steps.metadata.outputs.fastly_service_version_info }}
+                  echo "${{ steps.metadata.outputs.fastly_service_config_url }}"
+                  echo "${{ steps.metadata.outputs.fastly_service_version_info }}"
