Cleanup CI/CD (#13)
* fix ci

* fix terraform init call

* fix terraform working dir

* use terraform actions v0.4.0

* fix staging CI

* fix production CI

* test Fastly Terraform Metadata Action

* add new step to staging CI

* add new step to production CI

* add new step to CI

* remove hello world step from CI

* add hello world step to CI

* remove hello world step from CI

* pray

* bump fastly provider from v0.9.0 to v0.11.0

--- a/.github/workflows/cd-production.yml
+++ b/.github/workflows/cd-production.yml
@@ -7,26 +7,40 @@ jobs:
     production:
         name: Production
         runs-on: ubuntu-latest
+        env:
+            TF_ACTION_COMMENT: false
+            TF_VAR_FASTLY_PRODUCTION_API_KEY: ${{ secrets.TF_VAR_FASTLY_PRODUCTION_API_KEY }}
         steps:
             - name: Checkout repository
               uses: actions/checkout@v1
             - name: Terraform init
-              env:
-                  TF_VAR_FASTLY_PRODUCTION_API_KEY: ${{ secrets.TF_VAR_FASTLY_PRODUCTION_API_KEY }}
-              run: terraform init -input=false -no-color tf/production
+              uses: hashicorp/terraform-github-actions/init@v0.4.6
+              with:
+                  args: tf/production
+            - name: Terraform version
+              run: terraform --version
             - name: Terraform import
-              env:
-                  TF_VAR_FASTLY_PRODUCTION_API_KEY: ${{ secrets.TF_VAR_FASTLY_PRODUCTION_API_KEY }}
               run: terraform import -input=false -config=tf/production -no-color fastly_service_v1.api-service-production-0p7ElaomsexoNHwdMbYJac 0p7ElaomsexoNHwdMbYJac
-            - name: Add activate attribute to Terraform state
+            - name: Update activate attribute in Terraform state file
               run: jq '.resources[].instances[].attributes.activate = false' terraform.tfstate > temp && mv temp terraform.tfstate
             - name: Terraform plan
-              env:
-                  TF_VAR_FASTLY_PRODUCTION_API_KEY: ${{ secrets.TF_VAR_FASTLY_PRODUCTION_API_KEY }}
-              run: terraform plan -input=false -out=production.plan -no-color tf/production
+              id: plan
+              uses: hashicorp/terraform-github-actions/plan@v0.4.6
+              with:
+                  args: ['tf/production', '-out=production.plan']
             - name: Terraform apply
-              env:
-                  TF_VAR_FASTLY_PRODUCTION_API_KEY: ${{ secrets.TF_VAR_FASTLY_PRODUCTION_API_KEY }}
-              run: terraform apply production.plan
-            - name: Print Terraform state
-              run: cat terraform.tfstate
+              uses: hashicorp/terraform-github-actions/apply@v0.4.6
+              with:
+                  args: production.plan
+            - name: Fastly Terraform metadata
+              id: metadata
+              uses: philippschulte/fastly-terraform-metadata-action@master
+              with:
+                  tf_action_changes_present: ${{ steps.plan.outputs.changes-present }}
+            - name: Print Fastly Service metadata
+              if: ${{ steps.plan.outputs.changes-present }} == 'true'
+              run: |
+                  echo "${{ steps.metadata.outputs.fastly_service_config_url }}"
+                  echo "${{ steps.metadata.outputs.fastly_service_version_info }}"
+                  echo "${{ steps.metadata.outputs.fastly_service_id }}"
+                  echo "${{ steps.metadata.outputs.fastly_active_version }}"
