--- a/.github/workflows/cd-staging.yml
+++ b/.github/workflows/cd-staging.yml
@@ -27,7 +27,7 @@ jobs:
               id: plan
               uses: hashicorp/terraform-github-actions/plan@v0.4.6
               with:
-                  args: ['tf/staging', '-out=staging.plan']
+                  args: -out=staging.plan tf/staging
             - name: Terraform apply
               uses: hashicorp/terraform-github-actions/apply@v0.4.6
               with:
@@ -38,7 +38,7 @@ jobs:
               with:
                   tf_action_changes_present: ${{ steps.plan.outputs.changes-present }}
             - name: Print Fastly Service metadata
-              if: ${{ steps.plan.outputs.changes-present }} == 'true'
+              if: steps.plan.outputs.changes-present == 'true'
               run: |
                   echo "${{ steps.metadata.outputs.fastly_service_config_url }}"
                   echo "${{ steps.metadata.outputs.fastly_service_version_info }}"
