update period of gcs loggin back to 3600

--- a/.github/workflows/ci-production.yml
+++ b/.github/workflows/ci-production.yml
@@ -52,7 +52,7 @@ jobs:
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             TF_VAR_FASTLY_PRODUCTION_API_KEY: ${{ secrets.TF_VAR_FASTLY_PRODUCTION_API_KEY }}
-            TF_VAR_GCS_LOGGING_NAME: '${{ secrets.TF_VAR_GCS_LOGGING_NAME }}'
+            TF_VAR_GCS_LOGGING_NAME: ${{ 'secrets.TF_VAR_GCS_LOGGING_NAME' }}
         steps:
             - name: Checkout repository
               uses: actions/checkout@v1
