--- a/.github/workflows/cd-staging.yml
+++ b/.github/workflows/cd-staging.yml
@@ -37,3 +37,5 @@ jobs:
           tf_actions_subcommand: apply
           tf_actions_comment: false
           args: staging.plan
+      - name: List
+        run: ls -al
